// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio should render correctly 1`] = `
<div>
  <label
    class="ant-radio-wrapper css-dev-only-do-not-override-os2fvf"
  >
    <span
      class="ant-radio ant-wave-target"
    >
      <input
        class="ant-radio-input"
        type="radio"
        value="aetna"
      />
      <span
        class="ant-radio-inner"
      />
    </span>
  </label>
</div>
`;

exports[`RadioGroup should render correctly 1`] = `
<div>
  <div
    class="ant-radio-group ant-radio-group-solid css-dev-only-do-not-override-os2fvf"
  >
    <label
      class="ant-radio-button-wrapper css-dev-only-do-not-override-os2fvf"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="aetna"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        aetna
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper css-dev-only-do-not-override-os2fvf"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="cigna"
        />
        <span
          class="ant-radio-button-inner"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        cigna
      </span>
    </label>
  </div>
</div>
`;
